--- a/style.css
+++ b/style.css
@@ -1,48 +1,48 @@
 /* @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Roboto+Condensed:wght@100&display=swap'); */
 
-*{
+* {
     margin: 0;
     box-sizing: border-box;
     padding: 0;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-body{
+body {
     background: #37506fd1;
 }
 
-.card{
+.card {
     width: 90%;
     max-width: 470px;
-    background: linear-gradient(135deg , #00feba, #5b548a);
+    background: linear-gradient(135deg, #00feba, #5b548a);
     color: #fff;
-    margin: 100px auto 0 ;
-    border-radius: 20px ;
-    padding: 40px 35px ;
+    margin: 100px auto 0;
+    border-radius: 20px;
+    padding: 40px 35px;
     text-align: center;
 }
 
-.search{
+.search {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-.search input{
+.search input {
     border: 0;
     outline: 0;
     background-color: #ebfffc;
     color: #555;
     padding: 10px 25px;
     height: 60px;
-    border-radius:30px ;
+    border-radius: 30px;
     flex: 1;
     margin: 16px;
     font-size: 18px;
 }
 
-.search button{
+.search button {
     border: 0;
     outline: 0;
     background-color: #ebfffc;
@@ -61,18 +61,18 @@ body{
     margin-top: 30px;
 }
 
-.weather-icon h1{
+.weather-icon h1 {
     font-size: 80px;
     font-weight: 500;
 }
 
-.weather-icon h2{
+.weather-icon h2 {
     font-size: 45px;
     font-weight: 400;
     margin-top: -10px;
 }
 
-.details{
+.details {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -80,27 +80,29 @@ body{
     margin-top: 50px;
 }
 
-.col{
+.col {
     display: flex;
     align-items: center;
     text-align: left;
 }
 
-.col img{
+.col img {
     width: 40px;
     margin-right: 10px;
 }
 
 
-.humidity, .wind{
+.humidity,
+.wind {
     font-size: 28px;
     margin-top: -6px;
 }
 
-.weather{
+.weather {
     display: none;
 }
-.error{
+
+.error {
     text-align: left;
     margin-left: 10px;
     font-size: 14px;
@@ -108,19 +110,50 @@ body{
     display: none;
 }
 
-/* @media only screen and (max-width: 480px) {
-    .search{
+@media only screen and (max-width: 280px) {
+    .card {
+        width: 40vh;
+    }
+
+    .search {
         width: 100%;
         display: flex;
         align-items: center;
-        justify-content: space-between;
+        justify-content: space-around;
     }
-  }
 
-  @media (prefers-color-scheme: dark) {
-    .theme-a.adaptive {
-      background: #753;
-      color: #dcb;
-      outline: 5px dashed #000;
+    .search input {
+        width: 30vh;
     }
-  } */
+
+    .search button {
+        margin-right: 15px;
+        border-radius: 20px;
+    }
+
+    .search button img {
+        width: 40px;
+        /* width: 5vh; */
+    }
+
+    .weather-icon {
+        width: 10vh;
+    }
+
+    .weather-icon h1 {
+        font-size: 25px;
+    }
+
+    .details {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-top: 20px;
+    }
+
+    .humidity,
+    .wind {
+        font-size: 20px;
+        margin-top: 5px;
+    }
+}
